Fixed bug where jar URL was returned that did not contain a protocol on the nested url.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.1@400134 13f79535-47bb-0310-9956-ffa450edef68